--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
+    <!-- TextSize -->
+    <dimen name="textSize_button">14sp</dimen>
+    <dimen name="textSize_caption">12sp</dimen>
+    <dimen name="textSize_body">14sp</dimen>
+    <dimen name="textSize_subhead">16sp</dimen>
+    <dimen name="textSize_title">20sp</dimen>
+    <dimen name="textSize_headline">24sp</dimen>
+    <dimen name="textSize_display1">34sp</dimen>
+    <dimen name="textSize_display2">45sp</dimen>
+    <dimen name="textSize_display3">56sp</dimen>
+    <dimen name="textSize_display4">112sp</dimen>
+
 </resources>
