--- a/app/src/main/res/layout/fragment_post_detail.xml
+++ b/app/src/main/res/layout/fragment_post_detail.xml
@@ -1,13 +1,88 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.mksengun.demoproject.fragment.PostDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:visibility="invisible"
+        android:indeterminate="true"
+        android:layout_height="wrap_content" />
 
-</FrameLayout>
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cardView"
+        android:layout_margin="8dp"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_below="@+id/progressBar"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="4dp">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/textViewName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:fontFamily="sans-regular"
+                android:layout_marginLeft="16dp"
+                android:text=" "
+                android:layout_marginTop="16dp"
+                android:textColor="@color/black54"
+                android:textSize="@dimen/textSize_caption" />
+
+            <TextView
+                android:id="@+id/textViewTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:layout_marginLeft="16dp"
+                android:text=" "
+                android:layout_marginTop="8dp"
+                android:textColor="@color/black87"
+                android:textSize="@dimen/textSize_subhead"
+                android:layout_below="@+id/textViewName"/>
+
+
+            <TextView
+                android:id="@+id/textViewBody"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:layout_marginLeft="16dp"
+                android:text=" "
+                android:layout_marginTop="8dp"
+                android:textColor="@color/black87"
+                android:textSize="@dimen/textSize_body"
+                android:layout_below="@+id/textViewTitle"/>
+
+            <TextView
+                android:id="@+id/textViewComment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif"
+                android:paddingLeft="16dp"
+                android:paddingTop="20dp"
+                android:text=" "
+                android:textColor="@color/black54"
+                android:paddingBottom="16dp"
+                android:textSize="@dimen/textSize_caption"
+                android:layout_below="@+id/textViewBody"
+                android:layout_alignParentStart="true" />
+        </RelativeLayout>
+
+
+    </android.support.v7.widget.CardView>
+
+
+
+
+</RelativeLayout>
